# Abstrax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.c
include/abstrax/: baseobject.h
include/abstrax/dsa/: list.h
include/abstrax/string/: string.h
include/abstrax/traits/: iterable.h
include/abstrax/types/: string.h
src/dsa/: list.c
src/string/: string.c
src/types/: string.c
